# KERAS

./: .gitignore  class_one.ipynb  class_two.ipynb  exercises.ipynb  model.h5  model.keras  pyproject.toml
