[tool.poetry]
name = "Machine learning with keras"
version = "0.1.0"
description = ""
authors = ["Gregorio honorato <greghono@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
keras = "^3.4.1"
tensorflow = "^2.16.2"
matplotlib = "^3.9.1"
pydotplus = "^2.0.2"
opencv-contrib-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
